<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/startFragment"
    android:id="@+id/nav_graph">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.test.view.StartFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_TypeFragment2"
            app:destination="@id/TypeFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/TypeFragment"
        android:name="com.example.test.view.TypesFragment"
        android:label="@string/choose"
        tools:layout="@layout/fragment_types" >
        <action
            android:id="@+id/action_TypeFragment_to_pickupFragment"
            app:destination="@id/pickupFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_TypeFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.example.test.view.PickUpFragment"
        android:label="@string/pickup_date"
        tools:layout="@layout/fragment_pick_up" >
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/summaryFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_pickupFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.test.view.SummeryFragment"
        android:label="@string/order_summery"
        tools:layout="@layout/fragment_summery" >
        <action
            android:id="@+id/action_summaryFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>