<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.test.model.OrderViewModel" />

        <variable
            name="summeryFragment"
            type="com.example.test.view.SummeryFragment" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SummeryFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/side_margin">

                <!-- Group the order details into a single ViewGroup and set focusable = true,
                     so all fields will be read aloud together by the accessibility service -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/quantity_label"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textAllCaps="true"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/quantity"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/order_summary_margin"
                        android:text="@{viewModel.quantity.toString()}" />

                    <View
                        android:id="@+id/divider1"
                        style="@style/Widget.Cupcake.Divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/side_margin"
                        android:layout_marginBottom="@dimen/side_margin" />

                    <TextView
                        android:id="@+id/flavor_label"
                        style="@style/Widget.Cupcake.TextView.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tyype" />

                    <TextView
                        android:id="@+id/flavor"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/order_summary_margin"
                        android:text="@{viewModel.type}" />

                    <View
                        android:id="@+id/divider2"
                        style="@style/Widget.Cupcake.Divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/side_margin"
                        android:layout_marginBottom="@dimen/side_margin" />

                    <TextView
                        android:id="@+id/pickup_label"
                        style="@style/Widget.Cupcake.TextView.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pickup_date" />

                    <TextView
                        android:id="@+id/date"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/order_summary_margin"
                        android:text="@{viewModel.data}" />

                    <View
                        android:id="@+id/divider3"
                        style="@style/Widget.Cupcake.Divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/side_margin"
                        android:layout_marginBottom="@dimen/margin_between_elements" />

                    <TextView
                        android:id="@+id/total"
                        style="@style/Widget.Cupcake.TextView.FinalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/side_margin"
                        android:text="@{@string/subtotal(viewModel.price)}" />

                </LinearLayout>

                <Button
                    android:id="@+id/send_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> summeryFragment.sendOreder()}"
                    android:layout_marginTop="@dimen/side_margin"
                    android:text="@string/send" />

                <Button
                    android:id="@+id/cancel_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="379dp"
                    android:onClick="@{() ->summeryFragment.cancelOrder()}"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_elements"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:text="@string/cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/send_button" />

                <androidx.cardview.widget.CardView
                    android:layout_marginLeft="40dp"
                    android:layout_width="300dp"
                    app:cardCornerRadius="100dp"
                    app:cardElevation="50dp"
                    android:layout_height="300dp">
                    <ImageView
                        android:src="@drawable/delevery_boy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>